[package]
name = "cube"
version = "0.1.0"
edition = "2021"

[dependencies]
cube-common = { path = "../cube-common", features = ["user"] }
k8s-openapi = { version = "0.23.0", features = ["v1_27"] }
kube = { version = "0.97.0", features = ["ws"] }
prometheus = "0.13.4"

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "fs"] }
futures = "0.3.31"
serde_json = "1.0.133"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
cube-ebpf = { path = "../cube-ebpf" }

[[bin]]
name = "cube"
path = "src/main.rs"
